# wf-public-profiles

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  justfile  pyproject.toml
alembic/: env.py
alembic/versions/: 5dc3336a2045_initial_create.py
scripts/: start_public_profiles_service.sh
wf_public_profiles/: __init__.py  __main__.py  config.py  fastapi_deps.py  log.py  main.py  routes.py
wf_public_profiles/cron/: __main__.py  scheduler.py
wf_public_profiles/crud/: __init__.py  public_profile.py
wf_public_profiles/db/: base.py  session.py
wf_public_profiles/models/: public_profile.py
wf_public_profiles/schemas/: __init__.py  public_profile.py
wf_public_profiles/tasks/: tasks.py
